--- a/CharityFundingPredictor_OptimizeModel.ipynb
+++ b/CharityFundingPredictor_OptimizeModel.ipynb
@@ -171,8 +171,8 @@
     "import tensorflow as tf\n",
     "\n",
     "#  Import and read the charity_data.csv.\n",
-    "import pandas as pd \n",
-    "application_df = pd.read_csv(\"Resources/charity_data.csv\")\n",
+    "import pandas as pd\n",
+    "application_df = pd.read_csv(\"https://static.bc-edx.com/data/dla-1-2/m21/lms/starter/charity_data.csv\")\n",
     "application_df.head()"
    ]
   },
